# weavelens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.bot  README.md  README_DEPLOY.md  p.patch  pyproject.toml  pyrightconfig.json
deployment/: docker-compose.bot.yml  docker-compose.override.yml  docker-compose.yml
scripts/: eval_retrieval.py  weaviate_script.py
src/weavelens/: security.py  settings.py
src/weavelens/api/: main.py  utils.py
src/weavelens/api/routers/: bot_intent.py  health.py  ingest.py  search.py
src/weavelens/bot/: tg_bot.py
src/weavelens/db/: schema.py  weaviate_client.py
src/weavelens/ingest/: chunker.py  loader.py
src/weavelens/llm/: ollama_client.py
src/weavelens/models/: embeddings.py  llm.py
src/weavelens/monitoring/: logging.py  metrics.py
src/weavelens/pipeline/: index.py  query.py
src/weavelens/utils/: crypto.py  io.py  text.py
tests/: static_checks.py  test_basic.py  test_bot_token_alias.py  test_parsing_min.py  test_settings.py  test_settings_allowlist.py  test_settings_bot.py  test_settings_env_parsing.py  test_settings_gpu.py  test_settings_optional.py  test_weaviate_settings.py
weavelens_api_patch/: README-PATCH.txt
weavelens_api_patch/src/weavelens/: settings.py
weavelens_api_patch/src/weavelens/api/: main.py
weavelens_api_patch/src/weavelens/api/routers/: health.py  ingest.py  search.py
weavelens_api_patch/src/weavelens/db/: weaviate_client.py
weavelens_api_patch/src/weavelens/llm/: ollama_client.py
weavelens_api_patch/src/weavelens/pipeline/: index.py
