[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "weavelens"
dynamic = ["version"]
description = "This module is needed to control your documents"
requires-python = ">=3.10"
authors = [
    {name = "Michael", email = "onisoris@yandex.ru"},
    {name = "Egor", email = "egor.goncharov.oisa@mail.ru"},
]
maintainers = [
    {name = "Michael", email = "onisoris@yandex.ru"}
]
dependencies = [
    "aiogram>=3.22.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "weaviate-client>=4.16.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = "Apache-2.0"
license-files = ["LICENSE*"]
readme = {file = "README.md", content-type = "text/markdown"}


[project.urls]
Homepage = "https://github.com/OnisOris/weavelens"
Documentation = "https://onisoris.github.io/weavelens"
Repository = "https://github.com/OnisOris/weavelens.git"
Issues = "https://github.com/OnisOris/weavelens/issues"

[project.scripts]
start_server_radxa = "app.main:main"
weavelens-bot = "weavelens.bot.tg_bot:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 100
select = [
"E",
"F",
"I",
"UP"
]
